# rumi-mjlab

./: .gitignore  README.md  pyproject.toml
src/rumi_getup/: __init__.py  env_cfgs.py  rl_cfg.py
src/rumi_getup/rumi/: rumi_constants.py
src/rumi_getup/rumi/xmls/: rumi.xml
src/rumi_velocity/: __init__.py  env_cfgs.py  rl_cfg.py
src/rumi_velocity/rumi/: rumi_constants.py
src/rumi_velocity/rumi/xmls/: rumi.xml  rumi_joint_limits.xml  rumi_orig.xml  scene.xml
