[project]
name = "rumi-velocity"
version = "0.1.0"
description = "Rumi quadruped robot velocity task for mjlab"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
mjlab = { path = "../mjlab", editable = true }
mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp", rev = "1dc288cf1fa819fc3346ec5c9546e2cc2b7be667"}

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
indent-width = 2
src = ["rumi_velocity", "rumi_getup"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.entry-points."mjlab.tasks"]
rumi_velocity = "rumi_velocity"
rumi_getup = "rumi_getup"
